# apidocs

./: .gitignore  Cargo.toml
src/: cli.rs  endpoints.rs  logging.rs  main.rs  svc.rs
src/endpoints/: metrics.rs  openapi.rs  prelude.rs
