[package]
name = "apidocs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
axum = { version = "0.6.12", features = ["headers", "macros"] }
color-eyre = "0.6.2"
prometheus = "0.13.3"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "tokio", "trace"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
utoipa = { version = "3.2.0", features = ["axum_extras"] }
