[package]
name = "apidocs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
atty = "0.2.14"
axum = { version = "0.6.12", features = ["headers", "macros"] }
clap = { version = "4.2.1", features = ["derive", "env"] }
color-eyre = "0.6.2"
lazy_static = "1.4.0"
prometheus = "0.13.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "tokio", "limit", "fs", "trace"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
utoipa = { version = "3.2.0", features = ["axum_extras"] }
